--- a/php/content/pools/offer.phtml
+++ b/php/content/pools/offer.phtml
@@ -23,7 +23,7 @@
         Напечатать предложение</a>
     </div>
   </div>
-  <div class="offer__parties">
+  <div class="center-wrap offer__parties offer__block">
       <div class="offer__party">
         <span class="offer__party_header">Кому</span>
         <h3 class="offer__party_title">Александр</h3>
@@ -45,9 +45,238 @@
         <p class="offer__party_details">Курс евро ЦБ: 89,69 руб.</p>
       </div>
   </div>
-  <div class="offer__banner">
+  <div class="center-wrap offer__banner offer__block">
     <a href="#" class="offer__banner_link">Скидка 20% на павильон Aura covers при покупке бассейна</a>
   </div>
+
+  <div class="center-wrap offer__pool offer__block">
+  <h3 class="offer__pool_name">Cristal Royal <span>12037</span></h3>
+  <div class="offer__pool_params">
+    <div class="offer__pool_img">
+      <img src="dist/assets/images/royal_grani.png" alt="">
+    </div>
+    <div class="offer__pool_param">
+      <h2>12</h2>
+      <span>Длина, м</span>
+    </div>
+    <div class="offer__pool_param">
+      <h2>3,7</h2>
+      <span>Ширина, м</span>
+    </div>
+    <div class="offer__pool_param">
+      <h2>1,4 - 1,75</h2>
+      <span>Глубина, м</span>
+    </div>
+    <div class="offer__pool_param">
+      <h2>28</h2>
+      <span>Объем чаши, м.куб</span>
+    </div>
+  </div>
+  <p class="offer__pool_color">Цвет: <span>Grani Cristal 6</span></p>
+  <a class="offer__pool_chertezh" href="#">Показать чертеж</a>
+  </div>
+
+  <div class="offer__description center-wrap">
+    <div class="offer__description_title offer__toggle" data-block="about">
+      <h2>Описание модели</h2>
+      <svg width="18px" height="17px" xmlns="http://www.w3.org/2000/svg">
+        <path d="M17.7071 0.292893C18.0676 0.653377 18.0953 1.22061 17.7903 1.6129L17.7071 1.70711L9.70711 9.70711C9.34662 10.0676 8.77939 10.0953 8.3871 9.7903L8.29289 9.70711L0.292892 1.70711C-0.0976315 1.31658 -0.0976315 0.683417 0.292892 0.292893C0.653376 -0.0675913 1.22061 -0.0953212 1.6129 0.209704L1.70711 0.292893L9 7.58579L16.2929 0.292893C16.6834 -0.0976309 17.3166 -0.0976309 17.7071 0.292893Z" fill="#000" />
+      </svg>
+    </div>
+    <div class="offer__description_content hidden" data-block="about">
+    Композитный бассейн ROYAL – одна из популярнейших линеек производства Аквабиография. Многие люди выбрали ROYAL из-за его классической формы и универсальных функций. Наша компания представляет четыре доступных в линейке модели.
+    ROYAL предлагает роскошь и стиль, как никто другой. Четкие линии, грандиозный вход и переменная глубина чаши делают ROYAL идеальным бассейном в любой обстановке.
+    Главным и несравнимым достоинством ROYAL безусловно является классическая римская лестница. Она является как парадным входом в бассейн, так и заметным украшением чаши в целом. Размер ступеней дает возможность с легкостью пользоваться бассейном людям всех возрастов и комплекций. При желании ступени можно оснастить диодной подсветкой, чтобы вариант исполнения Вашего бассейна стал эксклюзивным и неповторимым.
+    </div>
+  </div>
+  <div class="offer__description center-wrap offer__block">
+    <div class="offer__description_title offer__toggle" data-block="cristal">
+      <h2>Что означает Cristal</h2>
+      <svg width="18px" height="17px" xmlns="http://www.w3.org/2000/svg">
+        <path d="M17.7071 0.292893C18.0676 0.653377 18.0953 1.22061 17.7903 1.6129L17.7071 1.70711L9.70711 9.70711C9.34662 10.0676 8.77939 10.0953 8.3871 9.7903L8.29289 9.70711L0.292892 1.70711C-0.0976315 1.31658 -0.0976315 0.683417 0.292892 0.292893C0.653376 -0.0675913 1.22061 -0.0953212 1.6129 0.209704L1.70711 0.292893L9 7.58579L16.2929 0.292893C16.6834 -0.0976309 17.3166 -0.0976309 17.7071 0.292893Z" fill="#000" />
+      </svg>
+    </div>
+    <div class="offer__description_content hidden" data-block="cristal">
+    Композитный бассейн ROYAL – одна из популярнейших линеек производства Аквабиография. Многие люди выбрали ROYAL из-за его классической формы и универсальных функций. Наша компания представляет четыре доступных в линейке модели.
+    ROYAL предлагает роскошь и стиль, как никто другой. Четкие линии, грандиозный вход и переменная глубина чаши делают ROYAL идеальным бассейном в любой обстановке.
+    Главным и несравнимым достоинством ROYAL безусловно является классическая римская лестница. Она является как парадным входом в бассейн, так и заметным украшением чаши в целом. Размер ступеней дает возможность с легкостью пользоваться бассейном людям всех возрастов и комплекций. При желании ступени можно оснастить диодной подсветкой, чтобы вариант исполнения Вашего бассейна стал эксклюзивным и неповторимым.
+    </div>
+  </div>
+
+  <div class="offer__expenses offer__block">
+    <div class="center-wrap">
+      <div class="offer__expense">
+        <div class="offer__expense_name">Модель бассейна</div>
+        <div class="offer__expense_spacing"></div>
+        <div class="offer__expense_cost">1 090 000р.</div>
+      </div>
+      <div class="offer__expense">
+        <div class="offer__expense_name">Утепление Thermopool</div>
+        <div class="offer__expense_spacing"></div>
+        <div class="offer__expense_cost">115 000р.</div>
+      </div>
+      <div class="offer__expense">
+        <div class="offer__expense_name">Утепление Thermopool</div>
+        <div class="offer__expense_spacing"></div>
+        <div class="offer__expense_cost">115 000р.</div>
+      </div>
+      <div class="offer__expense">
+        <div class="offer__expense_name">Утепление Thermopool</div>
+        <div class="offer__expense_spacing"></div>
+        <div class="offer__expense_cost">115 000р.</div>
+      </div>
+      <div class="offer__expense">
+        <div class="offer__expense_name">Утепление Thermopool</div>
+        <div class="offer__expense_spacing"></div>
+        <div class="offer__expense_cost">115 000р.</div>
+      </div>
+      <div class="offer__expenses_summary">
+        <div class="offer__expense_name">Итого по категории</div>
+        <div class="offer__expense_spacing"></div>
+        <div class="offer__expense_cost">1 935 000р.</div>
+      </div>
+    </div>
+  </div>
+  <div class="center-wrap offer__banner offer__block">
+    <a href="#" class="offer__banner_link">Скидка 20% на павильон Aura covers при покупке бассейна</a>
+  </div>
+
+  <div class="offer__description center-wrap offer__description_flex">
+    <div>
+      <div class="offer__description_title">
+        <h2>Основное оборудование</h2>
+      </div>
+      <div class="offer__description_content offer__description_contentWithImg">
+      Основное оборудование это набор, необходимый для каждого бассейна. Для забора воды с поверхности предназначен скиммер, а с нижних слоев воды - донный забор. 
+      По трубам вода поступает в фильтровальную установку, где происходит ее механическая очистка. 
+      Очищенная вода подается в бассейн через возвратные форсунки. Для подводного освещения в бассейн устанавливают прожектор.
+      </div>
+    </div>
+    <div>
+      <img src="dist/assets/images/offer_pool.png" alt="">
+    </div>
+  </div>
+  <div class="offer__expenses offer__block">
+    <div class="center-wrap">
+      <div class="offer__expense offer__expense_title offer__expense_modified">
+        <div class="offer__expense_text">Наименование</div>
+        <div class="offer__expense_text">Кол-во</div>
+        <div class="offer__expense_text">Скидка, руб</div>
+        <div class="offer__expense_text">Сумма со скидкой, руб.</div>
+      </div>
+      <div class="offer__expense offer__expense_modified">
+        <div class="offer__expense_text">Трубная обвязка Ниагара 6 (не далее 5 м)</div>
+        <div class="offer__expense_text">1 шт.</div>
+        <div class="offer__expense_text">0</div>
+        <div class="offer__expense_text">37 759 р.</div>
+      </div>
+      <div class="offer__expense offer__expense_modified">
+        <div class="offer__expense_text">Трубная обвязка Ниагара 6 (не далее 5 м)</div>
+        <div class="offer__expense_text">1 шт.</div>
+        <div class="offer__expense_text">0</div>
+        <div class="offer__expense_text">37 759 р.</div>
+      </div>
+      <div class="offer__expense offer__expense_modified">
+        <div class="offer__expense_text">Трубная обвязка Ниагара 6 (не далее 5 м)</div>
+        <div class="offer__expense_text">1 шт.</div>
+        <div class="offer__expense_text">0</div>
+        <div class="offer__expense_text">37 759 р.</div>
+      </div>
+      <div class="offer__expense offer__expense_modified">
+        <div class="offer__expense_text">Трубная обвязка Ниагара 6 (не далее 5 м)</div>
+        <div class="offer__expense_text">1 шт.</div>
+        <div class="offer__expense_text">0</div>
+        <div class="offer__expense_text">37 759 р.</div>
+      </div>
+      <div class="offer__expense offer__expense_modified">
+        <div class="offer__expense_text">Трубная обвязка Ниагара 6 (не далее 5 м)</div>
+        <div class="offer__expense_text">1 шт.</div>
+        <div class="offer__expense_text">0</div>
+        <div class="offer__expense_text">37 759 р.</div>
+      </div>
+      <div class="offer__expenses_summary offer__expense offer__expense_modified">
+        <div class="offer__expense_text">Итого</div>
+        <div class="offer__expense_text">190 839 р.</div>
+      </div>
+    </div>
+  </div>
+
+  <div class="offer__description center-wrap offer__description_flex">
+    <div>
+      <div class="offer__description_title">
+        <h2>Дополнительное оборудование</h2>
+      </div>
+      <div class="offer__description_content offer__description_contentWithImg">
+      Чтобы повысить комфорт Вашего пребывания в бассейне, мы можем снабдить его дополнительным оборудованием. 
+      Это может быть нагрев воды в бассейне, системы автоматической дезинфекции, поручни и лестницы, водопады и противотоки, роботы-очистители. 
+      Также можно установить различные развлечения для досуга детей: горки и трамплины.
+      </div>
+    </div>
+    <div>
+      <img src="dist/assets/images/offer_pool2.png" alt="">
+    </div>
+  </div>
+  <div class="offer__expenses offer__block">
+    <div class="center-wrap">
+      <div class="offer__expense offer__expense_title offer__expense_modified">
+        <div class="offer__expense_text">Наименование</div>
+        <div class="offer__expense_text">Кол-во</div>
+        <div class="offer__expense_text">Скидка, руб</div>
+        <div class="offer__expense_text">Сумма со скидкой, руб.</div>
+      </div>
+      <div class="offer__expense offer__expense_modified">
+        <div class="offer__expense_text">Трубная обвязка Ниагара 6 (не далее 5 м)</div>
+        <div class="offer__expense_text">1 шт.</div>
+        <div class="offer__expense_text">0</div>
+        <div class="offer__expense_text">37 759 р.</div>
+      </div>
+      <div class="offer__expense offer__expense_modified">
+        <div class="offer__expense_text">Трубная обвязка Ниагара 6 (не далее 5 м)</div>
+        <div class="offer__expense_text">1 шт.</div>
+        <div class="offer__expense_text">0</div>
+        <div class="offer__expense_text">37 759 р.</div>
+      </div>
+      <div class="offer__expense offer__expense_modified">
+        <div class="offer__expense_text">Трубная обвязка Ниагара 6 (не далее 5 м)</div>
+        <div class="offer__expense_text">1 шт.</div>
+        <div class="offer__expense_text">0</div>
+        <div class="offer__expense_text">37 759 р.</div>
+      </div>
+      <div class="offer__expense offer__expense_modified">
+        <div class="offer__expense_text">Трубная обвязка Ниагара 6 (не далее 5 м)</div>
+        <div class="offer__expense_text">1 шт.</div>
+        <div class="offer__expense_text">0</div>
+        <div class="offer__expense_text">37 759 р.</div>
+      </div>
+      <div class="offer__expense offer__expense_modified">
+        <div class="offer__expense_text">Трубная обвязка Ниагара 6 (не далее 5 м)</div>
+        <div class="offer__expense_text">1 шт.</div>
+        <div class="offer__expense_text">0</div>
+        <div class="offer__expense_text">37 759 р.</div>
+      </div>
+      <div class="offer__expenses_summary offer__expense offer__expense_modified">
+        <div class="offer__expense_text">Итого</div>
+        <div class="offer__expense_text">190 839 р.</div>
+      </div>
+    </div>
+  </div>
+
+  <div class="offer__complect offer__block">
+    <h2 class="offer__complect_title">Комплектация</h2>
+    <div class="offer__complect_flex">
+      <div class="offer__complect_parts">
+        <div>
+          <p class="offer__complect_part"><span>Чаша</span><span>1 935 000р.</span></p>
+          <p class="offer__complect_part"><span>Основное оборудование</span><span>535 000р.</span></p>
+          <p class="offer__complect_part"><span>Дополнительное оборудование</span><span>190 839р.</span></p>
+        </div>
+        <div>
+          <p class="offer__complect_part"><span>ИТОГО:</span><span>2 735 000р.</span></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </section>
 
 <footer class="footer">
