--- a/src/assets/css/blocks/sidebar.scss
+++ b/src/assets/css/blocks/sidebar.scss
@@ -62,7 +62,7 @@
             font-weight: 400;
             position: relative;
             display: flex;
-            align-items: baseline;
+            align-items: center;
             padding: 1.8rem 3rem;
             transition: all 0.5s;
 
