--- a/src/assets/css/vars.scss
+++ b/src/assets/css/vars.scss
@@ -2,6 +2,7 @@
 
 // colors
 
+$lightGray: #f3f5f7;
 $color-1: #404042; // Ship Gray
 $color-2: #9dc997; // Spring Rain
 $color-3: #ffffff; // White
