--- a/src/assets/css/blocks/sections/offer.scss
+++ b/src/assets/css/blocks/sections/offer.scss
@@ -1,5 +1,11 @@
 .offer__header {
     position: relative;
+    a {
+        svg {
+            margin-bottom: 0;
+            margin-right: 10px;
+        }
+    }
 }
 .offer__header-content {
     position: absolute;
@@ -27,10 +33,13 @@
     }
 }
 
+.offer__block {
+    margin-bottom: 100px;
+}
+
 .offer__parties {
     display: flex;
-    width: 1200px;
-    margin: 75px auto 100px auto;
+    margin-top: 75px;
     justify-content: space-between;
 }
 
@@ -85,8 +94,9 @@
     width: 742px;
     box-sizing: border-box;
     padding: 29px 72px;
-    margin: 0 auto;
+    margin: 100px auto;
     border: 1px solid #4081FF;
+    
 }
 
 .offer__banner_link {
@@ -95,6 +105,195 @@
     font-size: 18px;
     line-height: 138.56%;
     text-align: center;
-    text-decoration-line: underline;
+    text-decoration:underline!important;
     color: #3569CF;
+}
+
+.offer__pool_name {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 113.5%;
+    color: #000;
+    margin-bottom: 45px;
+    span {
+        font-weight: 400;
+    }
+}
+
+.offer__pool_params {
+    display: flex;
+    margin-bottom: 36px;
+}
+
+.offer__pool_img {
+    margin-right: 70px;
+}
+
+.offer__pool_param {
+    margin-right: 60px;
+    min-width: fit-content;
+    text-align: center;
+    position: relative;
+    h2 {
+        font-style: normal;
+        font-weight: 300;
+        font-size: 66px;
+        line-height: 80px;
+    }
+    span {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 18px;
+        line-height: 22px;
+    }
+    &:after {
+        position: absolute;
+        height: 100%;
+        content: '';
+        background-color: #b4b4b4;
+        width: 1px;
+        transform: translate(3px, 2px) skew(-15deg, 0deg);
+        top: 0;
+        right: -30px;
+    }
+    &:last-child {
+        &:after {
+            width: 0;
+            height: 0;
+        }
+    }
+}
+
+.offer__pool_color {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 113.5%;
+    span {
+        font-weight: 300;
+    }
+}
+
+.offer__pool_chertezh {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 113.5%;
+    text-decoration: underline!important;
+    color: #494949;
+}
+
+.offer__expenses {
+    background-color: #FAFAFA;
+    padding: 78px 0;
+}
+
+.offer__expense, .offer__expenses_summary {
+    display: flex;
+    justify-content: space-between;
+}
+
+.offer__expense {
+    margin: 20px 0;
+    &_modified {
+        border-bottom: 1px solid #ABABAB;
+    }
+    .offer__expense_text:first-child {
+        text-align: left;
+        min-width: 35%;
+        width: 100%;
+    }
+}
+
+.offer__expense_title .offer__expense_text {
+    color: #636363;
+    font-size: 16px;
+}
+
+.offer__expense_text {
+    text-align: right;
+    min-width: 155px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 156.6%;
+    color: #000;
+}
+
+.offer__expense_name {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 113.5%;
+    color: #000000;
+    width: max-content;
+    white-space: nowrap;
+    margin-right: 10px;
+}
+
+.offer__expense_spacing {
+    width: 100%;
+    border-bottom: 1px dashed #868686;
+}
+
+.offer__expense_cost {
+    width: fit-content;
+    white-space: nowrap;
+    margin-left: 10px;
+    font-feature-settings: 'tnum' on, 'lnum' on;
+    font-size: 20px;
+    line-height: 130%;
+}
+
+.offer__expenses_summary {
+    margin-top: 10px;
+    .offer__expense_name, .offer__expense_cost{
+        color: #000;
+        font-weight: 600;
+    }
+}
+
+.offer__pool + .offer__description {
+    margin-bottom: 50px;
+}
+
+.offer__description_title {
+    cursor: pointer;
+    width: fit-content;
+    h2 {
+        display: inline-block;
+        margin-right: 10px;
+        margin-bottom: 27px;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 32px;
+        line-height: 113.5%;
+        color: #000000;
+    }
+    svg {
+        position: relative;
+        &.opened {
+            transform: rotate(180deg);
+            bottom: 5px;
+        }
+    }
+}
+
+.offer__description_content {
+    width: 745px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 160%;
+    color: #494949;
+    &WithImg {
+        width: 630px;
+    }
+}
+
+.offer__description_flex {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
 }
